--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@mantine/nprogress": "^7.11.2",
     "@mantine/spotlight": "^7.11.2",
     "@mantine/tiptap": "^7.11.2",
+    "@mantinex/mantine-logo": "^1.0.1",
     "@tabler/icons-react": "^3.10.0",
     "@tiptap/extension-link": "^2.4.0",
     "@tiptap/react": "^2.4.0",
