--- a/package.json
+++ b/package.json
@@ -25,12 +25,14 @@
     "@mantine/tiptap": "^7.11.2",
     "@mantinex/mantine-logo": "^1.0.1",
     "@tabler/icons-react": "^3.10.0",
+    "@tanstack/react-query": "^5.51.11",
     "@tiptap/extension-link": "^2.4.0",
     "@tiptap/react": "^2.4.0",
     "@tiptap/starter-kit": "^2.4.0",
     "axios": "^1.7.2",
     "dayjs": "^1.11.11",
     "embla-carousel-react": "^8.1.6",
+    "lottie-react": "^2.4.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
