--- a/package.json
+++ b/package.json
@@ -24,8 +24,9 @@
     "@mantine/spotlight": "^7.11.2",
     "@mantine/tiptap": "^7.11.2",
     "@mantinex/mantine-logo": "^1.0.1",
+    "@tabler/icons": "^3.11.0",
     "@tabler/icons-react": "^3.10.0",
-    "@tanstack/react-query": "^5.51.11",
+    "@tanstack/react-query": "^5.51.16",
     "@tiptap/extension-link": "^2.4.0",
     "@tiptap/react": "^2.4.0",
     "@tiptap/starter-kit": "^2.4.0",
@@ -34,7 +35,9 @@
     "embla-carousel-react": "^8.1.6",
     "lottie-react": "^2.4.0",
     "react": "^18.3.1",
+    "react-advanced-cropper": "^0.20.0",
     "react-dom": "^18.3.1",
+    "react-easy-crop": "^5.0.8",
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.24.1",
     "react-simple-typewriter": "^5.0.1",
