--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
     "react-simple-typewriter": "^5.0.1",
     "react-toastify": "^10.0.5",
     "recharts": "^2.12.7",
-    "typewriter-effect": "^2.21.0"
+    "typewriter-effect": "^2.21.0",
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
