--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-dom": "^18.3.1",
     "react-easy-crop": "^5.0.8",
     "react-icons": "^5.2.1",
+    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.24.1",
     "react-simple-typewriter": "^5.0.1",
     "react-toastify": "^10.0.5",
